syntax = "proto3";
package protobuf;

option go_package = "github.com/cmd-stream/examples-go/calc_protobuf/cmds";

// protoc --go_out=. --go_opt=paths=source_relative ./cmds/cmds.proto

message AddCmd {
  int64 A = 1;
  int64 B = 2;
}

message SubCmd {
  int64 A = 1;
  int64 B = 2;
}
